<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content">
	<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
		<ImageView android:layout_gravity="center" android:id="@id/cas_consent_logo" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginTop="10.0dip" android:src="@drawable/cas_protection_data" />
		<TextView android:textStyle="bold" android:textColor="#ff000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/cas_consent_headline" android:textAlignment="center" />
		<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="15.0dip" android:paddingEnd="15.0dip">
			<TextView android:textColor="#ff000000" android:textColorLink="#ff4285f4" android:id="@id/cas_consent_body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" />
			<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginStart="15.0dip" android:layout_marginEnd="15.0dip">
				<TextView android:textColor="#ff000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cas_consent_agree_title" />
				<LinearLayout android:orientation="vertical" android:id="@id/cas_consent_agrees" android:layout_width="fill_parent" android:layout_height="wrap_content" />
				<Button android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/cas_consent_accept" android:background="@drawable/cas_rounded_button" android:focusable="true" android:clickable="true" android:layout_width="320.0dip" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/cas_consent_accept" />
				<TextView android:textColor="#ff000000" android:gravity="center" android:layout_gravity="center" android:id="@id/cas_consent_decline" android:background="@android:color/transparent" android:layout_width="320.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/cas_consent_decline" android:textAllCaps="false" />
				<TextView android:textColor="#80000000" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/cas_consent_decline_description" />
			</LinearLayout>
			<include layout="@layout/cas_powered_mark" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
